fix: make CORS allowed origins env-driven and add S3 origin to ECS task definition